libclang-bootstrap/imports.h

// *** Top-level ***
// <https://clang.llvm.org/doxygen/group__CINDEX.html>

CXIndex             clang_createIndex (int excludeDeclarationsFromPCH, int displayDiagnostics);
void                clang_disposeIndex (CXIndex index);
// OMITTED: CXIndex             clang_createIndexWithOptions (const CXIndexOptions * options);
// OMITTED: void                clang_CXIndex_setGlobalOptions (CXIndex, unsigned options);
// OMITTED: unsigned            clang_CXIndex_getGlobalOptions (CXIndex);
// OMITTED: void                clang_CXIndex_setInvocationEmissionPathOption (CXIndex, const char * Path);
// OMITTED: unsigned            clang_isFileMultipleIncludeGuarded (CXTranslationUnit tu, CXFile file);
CXFile              clang_getFile (CXTranslationUnit tu, const char * file_name);
const char *        clang_getFileContents (CXTranslationUnit tu, CXFile file, size_t * size);
// OMITTED: CXSourceLocation    clang_getLocationForOffset (CXTranslationUnit tu, CXFile file, unsigned offset);
// OMITTED: CXSourceRangeList * clang_getSkippedRanges (CXTranslationUnit tu, CXFile file);
// OMITTED: CXSourceRangeList * clang_getAllSkippedRanges (CXTranslationUnit tu);
unsigned            clang_getNumDiagnostics (CXTranslationUnit Unit);
CXDiagnostic        clang_getDiagnostic (CXTranslationUnit Unit, unsigned Index);
// OMITTED: CXDiagnosticSet     clang_getDiagnosticSetFromTU (CXTranslationUnit Unit);

// *** Diagnostic reporting ***
// <https://clang.llvm.org/doxygen/group__CINDEX__DIAG.html>

unsigned                  clang_getNumDiagnosticsInSet (CXDiagnosticSet Diags);
CXDiagnostic              clang_getDiagnosticInSet (CXDiagnosticSet Diags, unsigned Index);
// OMITTED: CXDiagnosticSet           clang_loadDiagnostics (const char * file, enum CXLoadDiag_Error * error, CXString * errorString);
void                      clang_disposeDiagnosticSet (CXDiagnosticSet Diags);
CXDiagnosticSet           clang_getChildDiagnostics (CXDiagnostic D);
void                      clang_disposeDiagnostic (CXDiagnostic Diagnostic);
unsigned                  clang_defaultDiagnosticDisplayOptions (void);
enum CXDiagnosticSeverity clang_getDiagnosticSeverity (CXDiagnostic Diag);
unsigned                  clang_getDiagnosticCategory (CXDiagnostic Diag);
unsigned                  clang_getDiagnosticNumRanges (CXDiagnostic Diag);
unsigned                  clang_getDiagnosticNumFixIts (CXDiagnostic Diagnostic);
// OMITTED: time_t   clang_getFileTime (CXFile SFile);
// OMITTED: int      clang_getFileUniqueID (CXFile file, CXFileUniqueID * outID);
int      clang_File_isEqual (CXFile file1, CXFile file2);
// OMITTED: void         clang_disposeStringSet (CXStringSet * set);

// *** Translation unit manipulation ***
// <https://clang.llvm.org/doxygen/group__CINDEX__TRANSLATION__UNIT.html>

// OMITTED: CXString          clang_getTranslationUnitSpelling (CXTranslationUnit CTUnit);
// OMITTED: CXTranslationUnit clang_createTranslationUnitFromSourceFile (CXIndex CIdx, const char * source_filename, int num_clang_command_line_args, const char * const * clang_command_line_args, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files);
// OMITTED: CXTranslationUnit clang_createTranslationUnit (CXIndex CIdx, const char * ast_filename);
// OMITTED: enum CXErrorCode  clang_createTranslationUnit2 (CXIndex CIdx, const char * ast_filename, CXTranslationUnit * out_TU);
// OMITTED: unsigned          clang_defaultEditingTranslationUnitOptions (void);
CXTranslationUnit clang_parseTranslationUnit (CXIndex CIdx, const char * source_filename, const char * const * command_line_args, int num_command_line_args, struct CXUnsavedFile * unsaved_files, unsigned num_unsaved_files, unsigned options);
enum CXErrorCode  clang_parseTranslationUnit2 (CXIndex CIdx, const char * source_filename, const char * const * command_line_args, int num_command_line_args, struct CXUnsavedFile * unsaved_files, unsigned num_unsaved_files, unsigned options, CXTranslationUnit * out_TU);
// OMITTED: enum CXErrorCode  clang_parseTranslationUnit2FullArgv (CXIndex CIdx, const char * source_filename, const char * const * command_line_args, int num_command_line_args, struct CXUnsavedFile * unsaved_files, unsigned num_unsaved_files, unsigned options, CXTranslationUnit * out_TU);
// OMITTED: unsigned          clang_defaultSaveOptions (CXTranslationUnit TU);
// OMITTED: int               clang_saveTranslationUnit (CXTranslationUnit TU, const char * FileName, unsigned options);
// OMITTED: unsigned          clang_suspendTranslationUnit (CXTranslationUnit TU);
void              clang_disposeTranslationUnit (CXTranslationUnit TU);
// OMITTED: unsigned          clang_defaultReparseOptions (CXTranslationUnit TU);
// OMITTED: int               clang_reparseTranslationUnit (CXTranslationUnit TU, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files, unsigned options);
// OMITTED: const char *      clang_getTUResourceUsageName (enum CXTUResourceUsageKind kind);
// OMITTED: CXTUResourceUsage clang_getCXTUResourceUsage (CXTranslationUnit TU);
// OMITTED: void              clang_disposeCXTUResourceUsage (CXTUResourceUsage usage);
CXTargetInfo      clang_getTranslationUnitTargetInfo (CXTranslationUnit CTUnit);
void              clang_TargetInfo_dispose (CXTargetInfo Info);
unsigned                clang_isDeclaration (enum CXCursorKind CK);
unsigned                clang_isReference (enum CXCursorKind CK);