libclang-bindings/src/Clang/LowLevel/FFI.hs

{-# LANGUAGE CPP #-}
{-| this module is autogenerated with cabal run libclang-bootstrap -}
module Clang.LowLevel.FFI (module Clang.LowLevel.FFI) where

#include "clang_config.h"

import Clang.Enum.Simple
import Clang.Internal.ByValue
import Clang.Internal.ConstPtr
import Clang.LowLevel.Core.Enums
import Clang.LowLevel.Core.Pointers
import Clang.LowLevel.Core.Structs
import Foreign.C.Types
import Foreign.Ptr

-- *** Top-level ***

-- <https://clang.llvm.org/doxygen/group__CINDEX.html>

foreign import capi unsafe "clang_wrappers.h clang_createIndex"
  nowrapper_createIndex :: CInt -> CInt -> IO CXIndex

foreign import capi unsafe "clang_wrappers.h clang_disposeIndex"
  nowrapper_disposeIndex :: CXIndex -> IO ()

-- OMITTED: CXIndex             clang_createIndexWithOptions (const CXIndexOptions * options);

-- OMITTED: void                clang_CXIndex_setGlobalOptions (CXIndex, unsigned options);

-- OMITTED: unsigned            clang_CXIndex_getGlobalOptions (CXIndex);

-- OMITTED: void                clang_CXIndex_setInvocationEmissionPathOption (CXIndex, const char * Path);

-- OMITTED: unsigned            clang_isFileMultipleIncludeGuarded (CXTranslationUnit tu, CXFile file);

foreign import capi unsafe "clang_wrappers.h clang_getFile"
  nowrapper_getFile :: CXTranslationUnit -> ConstPtr CChar -> IO CXFile

foreign import capi unsafe "clang_wrappers.h clang_getFileContents"
  nowrapper_getFileContents :: CXTranslationUnit -> CXFile -> Ptr CSize -> IO (ConstPtr CChar)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getLocation :: CXTranslationUnit -> CXFile -> CUInt -> CUInt -> W CXSourceLocation_ -> IO ()

-- OMITTED: CXSourceLocation    clang_getLocationForOffset (CXTranslationUnit tu, CXFile file, unsigned offset);

-- OMITTED: CXSourceRangeList * clang_getSkippedRanges (CXTranslationUnit tu, CXFile file);

-- OMITTED: CXSourceRangeList * clang_getAllSkippedRanges (CXTranslationUnit tu);

foreign import capi unsafe "clang_wrappers.h clang_getNumDiagnostics"
  nowrapper_getNumDiagnostics :: CXTranslationUnit -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_getDiagnostic"
  nowrapper_getDiagnostic :: CXTranslationUnit -> CUInt -> IO CXDiagnostic

-- OMITTED: CXDiagnosticSet     clang_getDiagnosticSetFromTU (CXTranslationUnit Unit);

-- *** Diagnostic reporting ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__DIAG.html>

foreign import capi unsafe "clang_wrappers.h clang_getNumDiagnosticsInSet"
  nowrapper_getNumDiagnosticsInSet :: CXDiagnosticSet -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_getDiagnosticInSet"
  nowrapper_getDiagnosticInSet :: CXDiagnosticSet -> CUInt -> IO CXDiagnostic

-- OMITTED: CXDiagnosticSet           clang_loadDiagnostics (const char * file, enum CXLoadDiag_Error * error, CXString * errorString);

foreign import capi unsafe "clang_wrappers.h clang_disposeDiagnosticSet"
  nowrapper_disposeDiagnosticSet :: CXDiagnosticSet -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_getChildDiagnostics"
  nowrapper_getChildDiagnostics :: CXDiagnostic -> IO CXDiagnosticSet

foreign import capi unsafe "clang_wrappers.h clang_disposeDiagnostic"
  nowrapper_disposeDiagnostic :: CXDiagnostic -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_formatDiagnostic :: CXDiagnostic -> CUInt -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_defaultDiagnosticDisplayOptions"
  nowrapper_defaultDiagnosticDisplayOptions :: IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_getDiagnosticSeverity"
  nowrapper_getDiagnosticSeverity :: CXDiagnostic -> IO (SimpleEnum CXDiagnosticSeverity)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticLocation :: CXDiagnostic -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticSpelling :: CXDiagnostic -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticOption :: CXDiagnostic -> W CXString_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_getDiagnosticCategory"
  nowrapper_getDiagnosticCategory :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticCategoryText :: CXDiagnostic -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_getDiagnosticNumRanges"
  nowrapper_getDiagnosticNumRanges :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticRange :: CXDiagnostic -> CUInt -> W CXSourceRange_ -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_getDiagnosticNumFixIts"
  nowrapper_getDiagnosticNumFixIts :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getDiagnosticFixIt :: CXDiagnostic -> CUInt -> W CXSourceRange_ -> W CXString_ -> IO ()

-- *** File manipulation routines ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__FILES.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getFileName :: CXFile -> W CXString_ -> IO ()

-- OMITTED: time_t   clang_getFileTime (CXFile SFile);

-- OMITTED: int      clang_getFileUniqueID (CXFile file, CXFileUniqueID * outID);

-- OMITTED: int      clang_File_isEqual (CXFile file1, CXFile file2);

foreign import capi unsafe "clang_wrappers.h"
  wrap_File_tryGetRealPathName :: CXFile -> W CXString_ -> IO ()

-- *** Physical source locations ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__LOCATIONS.html>

-- OMITTED: CXSourceLocation clang_getNullLocation (void);

-- OMITTED: unsigned         clang_equalLocations (CXSourceLocation loc1, CXSourceLocation loc2);

#ifdef HAVE_CLANG_ISBEFOREINTRANSLATIONUNIT

foreign import capi unsafe "clang_wrappers.h"
  wrap_isBeforeInTranslationUnit :: R CXSourceLocation_ -> R CXSourceLocation_ -> IO CUInt

#endif

-- OMITTED: int              clang_Location_isInSystemHeader (CXSourceLocation location);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Location_isFromMainFile :: R CXSourceLocation_ -> IO CInt

-- OMITTED: CXSourceRange    clang_getNullRange (void);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getRange :: R CXSourceLocation_ -> R CXSourceLocation_ -> W CXSourceRange_ -> IO ()

-- OMITTED: unsigned         clang_equalRanges (CXSourceRange range1, CXSourceRange range2);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Range_isNull :: R CXSourceRange_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getExpansionLocation :: R CXSourceLocation_ -> Ptr CXFile -> Ptr CUInt -> Ptr CUInt -> Ptr CUInt -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getPresumedLocation :: R CXSourceLocation_ -> W CXString_ -> Ptr CUInt -> Ptr CUInt -> IO ()

-- OMITTED: void             clang_getInstantiationLocation (CXSourceLocation location, CXFile * file, unsigned * line, unsigned * column, unsigned * offset);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getSpellingLocation :: R CXSourceLocation_ -> Ptr CXFile -> Ptr CUInt -> Ptr CUInt -> Ptr CUInt -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getFileLocation :: R CXSourceLocation_ -> Ptr CXFile -> Ptr CUInt -> Ptr CUInt -> Ptr CUInt -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getRangeStart :: R CXSourceRange_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getRangeEnd :: R CXSourceRange_ -> W CXSourceLocation_ -> IO ()

-- OMITTED: void             clang_disposeSourceRangeList (CXSourceRangeList * ranges);

-- *** String manipulation routines ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__STRING.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCString :: R CXString_ -> IO (ConstPtr CChar)

foreign import capi unsafe "clang_wrappers.h"
  wrap_disposeString :: R CXString_ -> IO ()

-- OMITTED: void         clang_disposeStringSet (CXStringSet * set);

-- *** Translation unit manipulation ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__TRANSLATION__UNIT.html>

-- OMITTED: CXString          clang_getTranslationUnitSpelling (CXTranslationUnit CTUnit);

-- OMITTED: CXTranslationUnit clang_createTranslationUnitFromSourceFile (CXIndex CIdx, const char * source_filename, int num_clang_command_line_args, const char * const * clang_command_line_args, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files);

-- OMITTED: CXTranslationUnit clang_createTranslationUnit (CXIndex CIdx, const char * ast_filename);

-- OMITTED: enum CXErrorCode  clang_createTranslationUnit2 (CXIndex CIdx, const char * ast_filename, CXTranslationUnit * out_TU);

-- OMITTED: unsigned          clang_defaultEditingTranslationUnitOptions (void);

foreign import capi unsafe "clang_wrappers.h clang_parseTranslationUnit"
  nowrapper_parseTranslationUnit :: CXIndex -> ConstPtr CChar -> ConstPtr (ConstPtr CChar) -> CInt -> Ptr CXUnsavedFile -> CUInt -> CUInt -> IO CXTranslationUnit

foreign import capi unsafe "clang_wrappers.h clang_parseTranslationUnit2"
  nowrapper_parseTranslationUnit2 :: CXIndex -> ConstPtr CChar -> ConstPtr (ConstPtr CChar) -> CInt -> Ptr CXUnsavedFile -> CUInt -> CUInt -> Ptr CXTranslationUnit -> IO (SimpleEnum (Maybe CXErrorCode))

-- OMITTED: enum CXErrorCode  clang_parseTranslationUnit2FullArgv (CXIndex CIdx, const char * source_filename, const char * const * command_line_args, int num_command_line_args, struct CXUnsavedFile * unsaved_files, unsigned num_unsaved_files, unsigned options, CXTranslationUnit * out_TU);

-- OMITTED: unsigned          clang_defaultSaveOptions (CXTranslationUnit TU);

-- OMITTED: int               clang_saveTranslationUnit (CXTranslationUnit TU, const char * FileName, unsigned options);

-- OMITTED: unsigned          clang_suspendTranslationUnit (CXTranslationUnit TU);

foreign import capi unsafe "clang_wrappers.h clang_disposeTranslationUnit"
  nowrapper_disposeTranslationUnit :: CXTranslationUnit -> IO ()

-- OMITTED: unsigned          clang_defaultReparseOptions (CXTranslationUnit TU);

-- OMITTED: int               clang_reparseTranslationUnit (CXTranslationUnit TU, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files, unsigned options);

-- OMITTED: const char *      clang_getTUResourceUsageName (enum CXTUResourceUsageKind kind);

-- OMITTED: CXTUResourceUsage clang_getCXTUResourceUsage (CXTranslationUnit TU);

-- OMITTED: void              clang_disposeCXTUResourceUsage (CXTUResourceUsage usage);

foreign import capi unsafe "clang_wrappers.h clang_getTranslationUnitTargetInfo"
  nowrapper_getTranslationUnitTargetInfo :: CXTranslationUnit -> IO CXTargetInfo

foreign import capi unsafe "clang_wrappers.h clang_TargetInfo_dispose"
  nowrapper_TargetInfo_dispose :: CXTargetInfo -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_TargetInfo_getTriple :: CXTargetInfo -> W CXString_ -> IO ()

-- OMITTED: int               clang_TargetInfo_getPointerWidth (CXTargetInfo Info);

-- *** Cursor manipulations ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__CURSOR__MANIP.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getNullCursor :: W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTranslationUnitCursor :: CXTranslationUnit -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_equalCursors :: R CXCursor_ -> R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isNull :: R CXCursor_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_hashCursor :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorKind :: R CXCursor_ -> IO (SimpleEnum CXCursorKind)

foreign import capi unsafe "clang_wrappers.h clang_isDeclaration"
  nowrapper_isDeclaration :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_isInvalidDeclaration :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isReference"
  nowrapper_isReference :: SimpleEnum CXCursorKind -> IO CUInt
